# .github

./: .gitignore  AGENTS.md  CLAUDE.md  deny.toml  ecosystem-versions.toml  install.ps1  install.sh  update.sh
.github/: dependabot.yml
.github/workflows/: docs-validation.yml  e2e-integration.yml  rust-ci.yml  rust-coverage.yml  rust-performance.yml
.handoffs/: HANDOFFS.md  README.md
.handoffs/annulus/: quality-fixes.md  verify-flag-file-state-bridge.sh  verify-tool-adoption-statusline.sh
.handoffs/archive/: README.md  hymenium-tool-registry.md  verify-hymenium-tool-registry.sh
.plans/: README.md  l2-e2e-integration-tests.md  shared-ipc.md  unified-installer.md
docs/: AI-CONCEPTS.md  CANOPY.md  CAP.md  ECOSYSTEM-ARCHITECTURE.md  HOST-SUPPORT.md  INSTALL-SCOPE.md  INTEGRATION.md  LLM-TRAINING.md  LOCAL-FIRST.md  OPERATOR-QUICKSTART.md  README.md  RELEASE-AND-INSTALL-MATRIX.md  STATE-LOCATIONS.md  TOOL-SELECTION.md  TROUBLESHOOTING.md
hymenium/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
hymenium/src/: retry.rs  store.rs
hymenium/src/decompose/: algorithm.rs  effort.rs  mod.rs  render.rs
hymenium/src/dispatch/: orchestrate.rs
hymenium/src/parser/: markdown.rs
hymenium/src/workflow/: gate.rs  template.rs
profile/: README.md
scripts/: check-spore-pins.sh  check-version-drift.sh  generate-project-docs.py  smoke-test.sh  test-integration.sh  test-lifecycle.sh  validate-docs.py
templates/: AGENTS-TEMPLATE.md  ARCHITECTURE-TEMPLATE.md  CHANGELOG-TEMPLATE.md  CLAUDE-TEMPLATE.md  README-TEMPLATE.md  ROADMAP-TEMPLATE.md  TROUBLESHOOTING-TEMPLATE.md
(+1021 files in other folders)
