[package]
name = "hymenium"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spore = { git = "https://github.com/basidiocarp/spore", tag = "v0.4.9" }
thiserror = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
tracing = "0.1"
ulid = "1"
toml = "1"

[dev-dependencies]
